bk_ida/gccida/c1/ix86_expand_epilogue
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ix86_expand_epilogue/src/i386.c:4826:22: error: use of undeclared identifier 'machine_mode'
v10 = gen_rtx_REG( ( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), 2); 
                     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ix86_expand_epilogue/src/i386.c:4830:31: error: use of undeclared identifier 'machine_mode'
v12 = gen_rtx_fmt_ee( PLUS, ( machine_mode)v11, global_rtl[4], v10); 
                              ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ix86_expand_epilogue/src/i386.c:4834:22: error: use of undeclared identifier 'machine_mode'
v15 = gen_rtx_MEM( ( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), global_rtl[4]); 
                     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ix86_expand_epilogue/src/i386.c:4840:31: error: use of undeclared identifier 'machine_mode'
v21 = gen_rtx_fmt_ee( PLUS, ( machine_mode)v11, global_rtl[2], v10); 
                              ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ix86_expand_epilogue/src/i386.c:4910:22: error: use of undeclared identifier 'machine_mode'
v35 = gen_rtx_REG( ( machine_mode)( ( ( target_flags & 0x2000000) == 0) ^ 5), i); 
                     ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ix86_expand_epilogue/src/obj/i386.o] Error 1
